--- a/frontend/499/src/app/widgets/weather/weather.component.html
+++ b/frontend/499/src/app/widgets/weather/weather.component.html
@@ -7,8 +7,15 @@
     <div class="weatherWidgetRow" style="font-size:15x;margin:top 10px;">Feels like: {{((WeatherData.main.feels_like- 273) * (9/5) + 32).toFixed(2)}} °</div>
     <div class="weatherWidgetRow" style="font-size:12px;">Low: {{((WeatherData.main.temp_min - 273) * (9/5) + 32).toFixed(2)}}° High: {{((WeatherData.main.temp_max- 273) * (9/5) + 32).toFixed(2)}}°</div>
     <mat-card-actions>
-      <button mat-button>Settings</button>
-      <button mat-button (click)="removeSelf()">Remove</button>
+        <form [formGroup]="form">
+            <div formArrayName="widget" >
+                <div [formGroupName]="0">
+                    <input type="text" placeholder="city" formControlName="city" style="font-size: 8px">
+                </div>
+            </div>
+        </form>
+        <button mat-button (click)="onSubmit()">Change city</button>
+        <button mat-button (click)="removeSelf()">Remove</button>
     </mat-card-actions>
 </mat-card>
 <br>
