--- a/frontend/499/src/app/home/home.component.html
+++ b/frontend/499/src/app/home/home.component.html
@@ -5,7 +5,7 @@
     <button mat-button  >+ Forecast</button>
 </div>
 <div fxLayout="row wrap" fxLayoutGap="15px grid" fxLayoutAlign="center" class="content">
-    <app-calendar fxFlex="15%" fxFlex.xs="100%" *ngFor="let i of calendar_widgets" (delete)="removeWidget($event)"></app-calendar>
+    <app-calendar fxFlex="15%" *ngFor="let i of calendar_widgets" (delete)="removeWidget($event)"></app-calendar>
     <app-weather fxFlex="18%" *ngFor="let i of weather_widgets" (delete)="removeWeather($event)"></app-weather>
     <app-stocks fxFlex="20%" *ngFor="let i of stock_widgets" (delete)="removeStocks($event)"></app-stocks>
 </div> 
