--- a/frontend/499/src/styles.css
+++ b/frontend/499/src/styles.css
@@ -2,17 +2,18 @@
 
 html {
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-  background-color: rgb(77, 77, 77);
+  background-color: rgb(255, 255, 255);
 
 }
 
 body {
   font-family: Roboto, sans-serif;
-  margin-top: 25px;
+  margin: 0px;
   font-size: 15px;
   line-height: 1.42857143;
   color: #2c3e50;
   background-color: #ffffff;
+  
 }
 
 .fill-remaining-space {
@@ -48,6 +49,4 @@ body {
 .container {
   margin-right: auto;
   margin-left: auto;
-  padding-left: 25px;
-  padding-right: 25px;
 }
