Revert "Changes to aboutus, new-user, and index.html"
This reverts commit bdaed14c72e8110b2f9b6a9edccc81fe441285e7.

--- a/frontend/499/src/app/aboutus/aboutus.component.html
+++ b/frontend/499/src/app/aboutus/aboutus.component.html
@@ -1,16 +1,12 @@
-<div fxLayout="row" fxLayoutAlign="space-evenly center">
 <mat-card class="aboutus-card">
     <mat-card-title>About Us</mat-card-title>
     <mat-card-content>
-      <p>Our mission is to provide a web application with widgets displaying several data sources and features.</p>
+      <p>Our mission is to provice a web application with widgets displaying several data sources and features.</p>
     </mat-card-content>
-    <div fxLayoutAlign="space-evenly center">
     <mat-card-actions>
         <div class="aboutus-button">
-        <a mat-raised-button [routerLink]="['/login']">Log In</a>
-        <a mat-raised-button color="primary" [routerLink]="['/new-user']">Sign Up</a>
+        <button mat-raised-button>Log In</button>
+        <button mat-raised-button color="primary">Sign Up</button>
         </div>
       </mat-card-actions>
-      </div>
     </mat-card>
-    </div>
