--- a/frontend/499/src/app/new-user/new-user.component.html
+++ b/frontend/499/src/app/new-user/new-user.component.html
@@ -3,67 +3,27 @@
     <mat-card-header> 
         <mat-card-title><h4>Register</h4></mat-card-title> 
         </mat-card-header>
-
-
         <mat-card-content>
-
-            <!--<form [formGroup]="registerForm" (ngSubmit)="onSubmit(registerForm.value)">-->
             <form [formGroup]="registerForm" >
-                <div fxLayoutGap="10px" fxLayout="row">
-                    <div fxLayout="column">
-                        <mat-form-field>
-                            <mat-label>Username</mat-label>
-                                <input type="text" formControlName="username" matInput required>
-                        </mat-form-field>
+                <div formArrayName="register" >    
+                    <div [formGroupName]="0" fxLayout="column" fxFlexFill>
+                        <p>Username:</p>
+                        <input placeholder="username" type="text" formControlName="username" matInput required>
+                        <p>Password (min 10 characters):</p>
+                        <input placeholder="password" type="password" formControlName="password" minlength="10" matInput required>
+                        <p>Re-type password:</p>
+                        <input placeholder="password"  type="password" formControlName="password2" matInput required>
                     </div>
+                    <div fxLayout="column" fxFlexFill>
+                        <button mat-button type="submit" (click)="onSubmit()">Submit</button> 
+                    </div>
+                    <p>
+                        Form Status: {{registerForm.status}}
+                    </p>
+                    <div *ngIf="registerForm.value.register[0].password != registerForm.value.register[0].password2">Passwords do not match</div>
 
-
                 </div>
-                <!--
-                <div fxLayout="column" fxFlexFill>
-                    <mat-form-field>
-                        <mat-label>Email</mat-label>
-                            <input type="email" formControlName="email" matInput email required>
-                    </mat-form-field>
-                </div> 
-                
-             -->   
-                
-                <div fxLayout="column" fxFlexFill>
-                    <mat-form-field>
-                        <mat-label>Password</mat-label>
-                            <input type="password" formControlName="password" minlength="10" matInput required>
-                            <mat-hint>At least 10 characters, </mat-hint>
-                           <!-- <mat-error *ngIf="registerForm.get('password').invalid">Invalid Password</mat-error> -->
-                    </mat-form-field>
-                </div>
-                <div fxLayout="column" fxFlexFill>
-                    <mat-form-field>
-                        <mat-label>Retype Password</mat-label>
-                            <input type="password" formControlName="password2" matInput required>
-                    </mat-form-field>
-                </div>
-            
-                <!--
-                <div fxLayout="column" fxFlexFill>
-                    <mat-form-field>
-                        <mat-label>(###) ###-####</mat-label>
-                            <input type="phone" formControlName="phone" matInput required>
-                            <mat-error *ngIf="registerForm.get('phone').invalid">Invalid Phone Number</mat-error> 
-                        </mat-form-field>
-                </div>
-            -->
-                <div fxLayout="column" fxFlexFill>
-                    
-                    <!-- <button mat-button type="submit">Submit</button> -->
-                    <button mat-button type="submit" [disabled]="!registerForm.valid">Submit</button>
-                </div>
-        
-              </form>
-
+            </form>
         </mat-card-content>
 </mat-card>
 </div>
-<p>
-    Form Status: {{ registerForm.status }}
-</p>
