color/style update and created toggle buttons for showing the edit/delete actionf for each widget component

--- a/frontend/499/src/app/app.component.html
+++ b/frontend/499/src/app/app.component.html
@@ -1,11 +1,10 @@
 <div class="container">
   <mat-toolbar color="warn">
-  <span>{{title}}</span>
-  <span class="fill-remaining-space"></span>
-  <img src="assets/img/suncloud.jpeg"
-    class="center-block"
-    style="max-height:100px" />
+    <span>{{title}}</span>
+    <span class="fill-remaining-space"></span>
+    <img src="assets/img/suncloud.jpeg" class="center-block" style="max-height:100px" />
   </mat-toolbar>
-  <span><app-tabs></app-tabs></span>
-  
+  <span>
+    <app-tabs></app-tabs>
+  </span>  
 </div>
