--- a/frontend/499/src/app/widgets/calendar/calendar.component.html
+++ b/frontend/499/src/app/widgets/calendar/calendar.component.html
@@ -5,8 +5,12 @@
     <div class="calendarWidgetRow" style="font-size:32px;margin:top 5px;">{{CalendarData.getDate()}}</div>
     <h1></h1>
     <div class="calendarWidgetRow" style="font-size:20px;margin:top 10px;">{{CalendarData.getFullYear()}}</div>
-    <mat-card-actions>
-      <button mat-button (click)="removeSelf()">Remove</button>
+    <mat-card-actions style="display:none">
+      <button mat-mini-fab (click)="removeSelf()" class="delete_button">
+        <mat-icon>delete</mat-icon>
+      </button>
     </mat-card-actions>
+    <button mat-mini-fab (click)="toggleButtonActionsVisible($event)" class="settings_button">
+      <mat-icon>settings</mat-icon>
+  </button>
 </mat-card>
-<br>
