--- a/frontend/499/src/app/widgets/stocks/stocks.component.html
+++ b/frontend/499/src/app/widgets/stocks/stocks.component.html
@@ -4,7 +4,7 @@
     <div class="stockWidgetRow" style="font-size:15x;margin:top 10px;color: red;">Low: {{StockData["Time Series (Daily)"][ "2022-03-18"]["3. low"]}}$</div>
     <div class="stockWidgetRow" style="font-size:15x;margin:top 10px;color: green;">High: {{StockData["Time Series (Daily)"][ "2022-03-18"]["2. high"]}}$</div>
     <div class="weatherWidgetRow" style="font-size:12px;">Volume: {{StockData["Time Series (Daily)"][ "2022-03-18"]["5. volume"]}}</div>
-    <mat-card-actions>
+    <mat-card-actions style="display:none">
         <form [formGroup]="form">
             <div formArrayName="widget" >
                 <div [formGroupName]="0">
@@ -12,8 +12,14 @@
                 </div>
             </div>
         </form>
-        <button mat-button (click)="onSubmit()">Change stock</button>
-        <button mat-button (click)="removeSelf()">Remove</button>
+        <button mat-mini-fab (click)="onSubmit()" class="update_button">
+            <mat-icon>arrow_circle_right</mat-icon>
+        </button>
+        <button mat-mini-fab (click)="removeSelf()" class="delete_button">
+            <mat-icon>delete</mat-icon>
+        </button>
     </mat-card-actions>
+    <button mat-mini-fab (click)="toggleButtonActionsVisible($event)" class="settings_button">
+        <mat-icon>settings</mat-icon>
+    </button>
 </mat-card>
-<br>
