--- a/frontend/499/src/app/widgets/weather/weather.component.html
+++ b/frontend/499/src/app/widgets/weather/weather.component.html
@@ -6,7 +6,8 @@
     </div>
     <div class="weatherWidgetRow" style="font-size:15x;margin:top 10px;color: rgb(63, 63, 134);">Feels like: {{((WeatherData.main.feels_like- 273) * (9/5) + 32).toFixed(2)}} °</div>
     <div class="weatherWidgetRow" style="font-size:12px;color: rgb(201, 111, 111);">Low: {{((WeatherData.main.temp_min - 273) * (9/5) + 32).toFixed(2)}}° High: {{((WeatherData.main.temp_max- 273) * (9/5) + 32).toFixed(2)}}°</div>
-    <mat-card-actions>
+    <mat-card-actions style="display:none">
+        <p>Change the City:</p>
         <form [formGroup]="form">
             <div formArrayName="widget" >
                 <div [formGroupName]="0">
@@ -21,5 +22,7 @@
             <mat-icon>delete</mat-icon>
         </button>
     </mat-card-actions>
+    <button mat-mini-fab (click)="toggleButtonActionsVisible($event)" class="settings_button">
+        <mat-icon>settings</mat-icon>
+    </button>
 </mat-card>
-<br>
