--- a/frontend/499/src/styles.css
+++ b/frontend/499/src/styles.css
@@ -2,7 +2,7 @@
 
 html {
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-  background-color: rgb(255, 255, 255);
+  background-color: #e0e0ce;
 
 }
 
@@ -12,10 +12,12 @@ body {
   font-size: 15px;
   line-height: 1.42857143;
   color: #2c3e50;
-  background-color: #ffffff;
+  background-color: #e0e0ce;
   
 }
-
+mat-ink-bar {
+  background-color: #f44336 !important;
+}
 .fill-remaining-space {
   flex: 1 1 auto;
 }
