--- a/frontend/499/src/app/widgets/stocks/stocks.component.html
+++ b/frontend/499/src/app/widgets/stocks/stocks.component.html
@@ -3,9 +3,10 @@
     <div class="stockWidgetRow" style="font-size:32px;margin:top 5px;">{{(StockData["Time Series (Daily)"][ "2022-03-18"]["4. close"])}}$</div>
     <div class="stockWidgetRow" style="font-size:15x;margin:top 10px;color: red;">Low: {{StockData["Time Series (Daily)"][ "2022-03-18"]["3. low"]}}$</div>
     <div class="stockWidgetRow" style="font-size:15x;margin:top 10px;color: green;">High: {{StockData["Time Series (Daily)"][ "2022-03-18"]["2. high"]}}$</div>
-    <div class="weatherWidgetRow" style="font-size:12px;">Volume: {{StockData["Time Series (Daily)"][ "2022-03-18"]["5. volume"]}}</div>
+    <div class="weatherWidgetRow" style="font-size:12px;">Volume: {{StockData["Time Series (Daily)"][ "2022-03-18"]["5. volume"]}} shares</div>
     <mat-card-actions style="display:none">
         <form [formGroup]="form">
+            <p>Change stock:</p>
             <div formArrayName="widget" >
                 <div [formGroupName]="0">
                     <input type="text" placeholder="stock" formControlName="stock" style="font-size: 8px">
