--- a/frontend/499/src/app/home/home.component.html
+++ b/frontend/499/src/app/home/home.component.html
@@ -12,7 +12,10 @@
         <mat-card>
             <mat-card-title>{{widget.name}}</mat-card-title>
             <mat-card-subtitle>{{widget.country}}</mat-card-subtitle>
-            <div class="weatherWidgetRow" style="font-size:20px;margin:top 5px;">{{widget.temp}} °f</div>
+            <div class="weatherWidgetRow" style="font-size:28px;margin:top 5px;">{{((widget.temp - 273) * (9/5) + 32).toFixed(2)}} °f</div>
+            <div class="weatherWidgetRow" style="font-size:15x;margin:top 10px;color: rgb(8, 8, 8);">Feels like: {{((widget.feels_like- 273) * (9/5) + 32).toFixed(2)}}°</div>
+            <div class="weatherWidgetRow" style="font-size:12px;color: rgb(35, 90, 209);">Low: {{((widget.temp_min - 273) * (9/5) + 32).toFixed(2)}}°</div>
+            <div class="weatherWidgetRow" style="font-size:12px;color: rgb(218, 55, 55);">High {{((widget.temp_max - 273) * (9/5) + 32).toFixed(2)}}°</div>
         </mat-card>
     </div>
 </div>
