--- a/frontend/499/src/app/home/home.component.html
+++ b/frontend/499/src/app/home/home.component.html
@@ -7,7 +7,7 @@
 <div fxLayout="row wrap" fxLayoutGap="15px grid" fxLayoutAlign="center" class="content">
     <app-calendar fxFlex="15%" *ngFor="let i of calendar_widgets" (delete)="removeWidget($event)"></app-calendar>
     <!-- <app-weather fxFlex="18%" *ngFor="let i of weather_widgets" (delete)="removeWeather($event)"></app-weather> -->
-    <app-stocks fxFlex="20%" *ngFor="let i of stock_widgets" (delete)="removeStocks($event)"></app-stocks>
+    <!-- <app-stocks fxFlex="20%" *ngFor="let i of stock_widgets" (delete)="removeStocks($event)"></app-stocks> -->
     <div fxFlex="15%" *ngFor="let widget of weather_widgets"> 
         <mat-card>
             <mat-card-title>{{widget.name}}</mat-card-title>
@@ -16,6 +16,16 @@
             <div class="weatherWidgetRow" style="font-size:15x;margin:top 10px;color: rgb(8, 8, 8);">Feels like: {{((widget.feels_like- 273) * (9/5) + 32).toFixed(2)}}°</div>
             <div class="weatherWidgetRow" style="font-size:12px;color: rgb(35, 90, 209);">Low: {{((widget.temp_min - 273) * (9/5) + 32).toFixed(2)}}°</div>
             <div class="weatherWidgetRow" style="font-size:12px;color: rgb(218, 55, 55);">High {{((widget.temp_max - 273) * (9/5) + 32).toFixed(2)}}°</div>
+        </mat-card>
+    </div>
+    <div fxFlex="15%" *ngFor="let widget of stock_widgets"> 
+        <mat-card>
+            <mat-card-title>{{widget.ticker}}</mat-card-title>
+            <mat-card-subtitle>{{widget.name}}</mat-card-subtitle>
+            <div class="stockWidgetRow" style="font-size:32px;margin:top 5px;">{{widget.current_price}}$</div>
+            <div class="stockWidgetRow" style="font-size:15x;margin:top 10px;color: red;">Low: {{widget.daily_low}}$</div>
+            <div class="stockWidgetRow" style="font-size:15x;margin:top 10px;color: green;">High: {{widget.daily_high}}$</div>
+            <div class="weatherWidgetRow" style="font-size:12px;">{{widget.volume}} shares</div>
         </mat-card>
     </div>
 </div>
