--- a/frontend/499/src/app/home/home.component.html
+++ b/frontend/499/src/app/home/home.component.html
@@ -30,6 +30,9 @@
             <div class="stockWidgetRow" style="font-size:15x;margin:top 10px;color: red;">Low: {{widget.daily_low}}$</div>
             <div class="stockWidgetRow" style="font-size:15x;margin:top 10px;color: green;">High: {{widget.daily_high}}$</div>
             <div class="weatherWidgetRow" style="font-size:12px;">{{widget.volume}} shares</div>
+            <button mat-mini-fab (click)="removeWeather(widget.name)" class="delete_button">
+                <mat-icon>delete</mat-icon>
+            </button>
         </mat-card>
     </div>
 </div>
