--- a/frontend/499/src/app/home/home.component.html
+++ b/frontend/499/src/app/home/home.component.html
@@ -17,8 +17,13 @@
             <div class="weatherWidgetRow" style="font-size:15x;margin:top 10px;color: rgb(8, 8, 8);">Feels like: {{((widget.feels_like- 273) * (9/5) + 32).toFixed(2)}}°</div>
             <div class="weatherWidgetRow" style="font-size:12px;color: rgb(35, 90, 209);">Low: {{((widget.temp_min - 273) * (9/5) + 32).toFixed(2)}}°</div>
             <div class="weatherWidgetRow" style="font-size:12px;color: rgb(218, 55, 55);">High {{((widget.temp_max - 273) * (9/5) + 32).toFixed(2)}}°</div>
-            <button mat-mini-fab (click)="removeWeather(widget.name)" class="delete_button">
-                <mat-icon>delete</mat-icon>
+            <mat-card-actions style="display:none">
+                <button mat-mini-fab (click)="removeWeather(widget.name)" class="delete_button">
+                    <mat-icon>delete</mat-icon>
+                </button>
+            </mat-card-actions>
+            <button mat-mini-fab (click)="toggleButtonActionsVisible($event)" class="settings_button">
+                <mat-icon>settings</mat-icon>
             </button>
         </mat-card>
     </div>
@@ -29,9 +34,14 @@
             <div class="stockWidgetRow" style="font-size:32px;margin:top 5px;">{{widget.current_price}}$</div>
             <div class="stockWidgetRow" style="font-size:15x;margin:top 10px;color: red;">Low: {{widget.daily_low}}$</div>
             <div class="stockWidgetRow" style="font-size:15x;margin:top 10px;color: green;">High: {{widget.daily_high}}$</div>
-            <div class="weatherWidgetRow" style="font-size:12px;">{{widget.volume}} shares</div>
-            <button mat-mini-fab (click)="removeWeather(widget.name)" class="delete_button">
-                <mat-icon>delete</mat-icon>
+            <div class="stockWidgetRow" style="font-size:12px;">{{widget.volume}} shares</div>
+            <mat-card-actions style="display:none">
+                <button mat-mini-fab (click)="removeStocks(widget.name)" class="delete_button">
+                    <mat-icon>delete</mat-icon>
+                </button>
+            </mat-card-actions>
+            <button mat-mini-fab (click)="toggleButtonActionsVisible($event)" class="settings_button">
+                <mat-icon>settings</mat-icon>
             </button>
         </mat-card>
     </div>
