Forecasts display correctly.

--- a/frontend/499/src/app/home/dialogs/create-forecast-widget-dialog.html
+++ b/frontend/499/src/app/home/dialogs/create-forecast-widget-dialog.html
@@ -1,7 +1,7 @@
 <h1 mat-dialog-title>Creating a new Forecast Widget</h1>
 <div mat-dialog-content>
   <mat-form-field appearance="fill">
-      <mat-label>City Name</mat-label>
+      <mat-label>City Name:</mat-label>
       <input placeholder="Enter a city" matInput [(ngModel)]="data.query">
   </mat-form-field>
 </div>
