--- a/frontend/499/src/app/home/dialogs/create-weather-widget-dialog.html
+++ b/frontend/499/src/app/home/dialogs/create-weather-widget-dialog.html
@@ -2,7 +2,7 @@
 <div mat-dialog-content>
   <mat-form-field appearance="fill">
       <mat-label>City Name:</mat-label>
-      <input matInput [(ngModel)]="data.query">
+      <input placeholder="Enter a city" matInput [(ngModel)]="data.query">
   </mat-form-field>
 </div>
 <div mat-dialog-actions>
