created a popup notification for logging out, bunch of styling

--- a/frontend/499/src/app/app.component.html
+++ b/frontend/499/src/app/app.component.html
@@ -1,8 +1,8 @@
 <div class="container">
-  <mat-toolbar color="warn">
+  <mat-toolbar style="padding-right: 0px;">
     <span>{{title}}</span>
     <span class="fill-remaining-space"></span>
-    <img src="assets/img/suncloud.jpeg" class="center-block" style="max-height:100px" />
+    <img src="assets/img/suncloud.jpeg" class="center-block" style="height:100%; right:0px; position:relative;" />
   </mat-toolbar>
   <span>
     <app-tabs></app-tabs>
