calendar months updated

--- a/frontend/499/src/app/widgets/calendar/calendar.component.html
+++ b/frontend/499/src/app/widgets/calendar/calendar.component.html
@@ -1,6 +1,6 @@
 <mat-card>
     <mat-card-title>Calendar</mat-card-title>
-    <div class="calendarWidgetRow" style="font-size:25px;">{{CalendarData.getMonth() + 1}}</div>
+    <div class="calendarWidgetRow" style="font-size:25px;">{{months[CalendarData.getMonth() + 1]}}</div>
     <h1></h1>
     <div class="calendarWidgetRow" style="font-size:32px;margin:top 5px;">{{CalendarData.getDate()}}</div>
     <h1></h1>
