--- a/frontend/499/src/app/home/home.component.html
+++ b/frontend/499/src/app/home/home.component.html
@@ -18,7 +18,7 @@
             <div class="weatherWidgetRow" style="font-size:12px;color: rgb(8, 8, 8);">Low: {{((widget.temp_min - 273) * (9/5) + 32).toFixed(2)}}°</div>
             <div class="weatherWidgetRow" style="font-size:12px;color: rgb(8, 8, 8);">High {{((widget.temp_max - 273) * (9/5) + 32).toFixed(2)}}°</div>
             <mat-card-actions style="display:none">
-                <button mat-mini-fab (click)="removeWeather(widget.name)" class="delete_button">
+                <button mat-mini-fab (click)="removeWeather(widget.widgetId)" class="delete_button">
                     <mat-icon>delete</mat-icon>
                 </button>
             </mat-card-actions>
@@ -49,8 +49,8 @@
     </div>
     <div fxFlex="15%" *ngFor="let widget of stock_widgets" class="widgetContainer"> 
         <mat-card>
-            <mat-card-title>{{widget.ticker}}</mat-card-title>
-            <mat-card-subtitle>{{widget.name}}</mat-card-subtitle>
+            <mat-card-title>{{widget.name}}</mat-card-title>
+            <mat-card-subtitle>{{widget.company}}</mat-card-subtitle>
             <div class="stockWidgetRow" style="font-size:32px;margin:top 5px;">{{widget.current_price}}$</div>
             <div class="stockWidgetRow" style="font-size:15x;margin:top 10px;color: red;">Low: {{widget.daily_low}}$</div>
             <div class="stockWidgetRow" style="font-size:15x;margin:top 10px;color: green;">High: {{widget.daily_high}}$</div>
