--- a/frontend/499/src/app/home/home.component.html
+++ b/frontend/499/src/app/home/home.component.html
@@ -1,68 +1,74 @@
-<div fxLayoutAlign="center">
-    <button mat-button  (click)="addWidget()">+ Calendar</button>
-    <button mat-button  (click)="createNewWeatherWidget()">+ Weather</button>
-    <button mat-button  (click)="createNewForecastWidget()">+ Forecast</button>
-    <button mat-button  (click)="createNewStockWidget()">+ Stocks</button>
-</div>
-<div fxLayout="row wrap" fxLayoutGap="15px grid" fxLayoutAlign="center" class="content">
-    <app-calendar class="widgetContainer" fxFlex="15%" *ngFor="let i of calendar_widgets" (delete)="removeWidget($event)"></app-calendar>
-    <!-- <app-weather fxFlex="18%" *ngFor="let i of weather_widgets" (delete)="removeWeather($event)"></app-weather> -->
-    <!-- <app-weather fxFlex="18%" *ngFor="let i of forecast_widgets" (delete)="removeForecast($event)"></app-forecast> -->
-    <!-- <app-stocks fxFlex="20%" *ngFor="let i of stock_widgets" (delete)="removeStocks($event)"></app-stocks> -->
-    <div fxFlex="15%" *ngFor="let widget of weather_widgets" class="widgetContainer"> 
-        <mat-card>
-            <mat-card-title>{{widget.name}}</mat-card-title>
-            <mat-card-subtitle>{{widget.country}}</mat-card-subtitle>
-            <div class="weatherWidgetRow" style="font-size:28px;margin:top 5px;">{{((widget.temp - 273) * (9/5) + 32).toFixed(2)}} °f</div>
-            <div class="weatherWidgetRow" style="font-size:15x;margin:top 10px;color: rgb(8, 8, 8);">Feels like: {{((widget.feels_like- 273) * (9/5) + 32).toFixed(2)}}°</div>
-            <div class="weatherWidgetRow" style="font-size:12px;color: rgb(8, 8, 8);">Low: {{((widget.temp_min - 273) * (9/5) + 32).toFixed(2)}}°</div>
-            <div class="weatherWidgetRow" style="font-size:12px;color: rgb(8, 8, 8);">High {{((widget.temp_max - 273) * (9/5) + 32).toFixed(2)}}°</div>
-            <mat-card-actions style="display:none">
-                <button mat-mini-fab (click)="removeWeather(widget.widgetId)" class="delete_button">
-                    <mat-icon>delete</mat-icon>
-                </button>
-            </mat-card-actions>
-            <button mat-mini-fab (click)="toggleButtonActionsVisible($event)" class="settings_button">
-                <mat-icon>settings</mat-icon>
-            </button>
-        </mat-card>
+<html>
+    <div fxLayoutAlign="center">
+        <button mat-button  (click)="addWidget()">+ Calendar</button>
+        <button mat-button  (click)="createNewWeatherWidget()">+ Weather</button>
+        <button mat-button  (click)="createNewForecastWidget()">+ Forecast</button>
+        <button mat-button  (click)="createNewStockWidget()">+ Stocks</button>
     </div>
-    <div fxFlex="15%" *ngFor="let widget of forecast_widgets" class="widgetContainer"> 
-        <mat-card>
-            <mat-card-title>{{widget.name}}</mat-card-title>
-            <mat-card-subtitle>{{widget.country}}</mat-card-subtitle>
-            <div class="forecastWidgetRow" style="font-size:24x;margin:top 10px;color: rgb(8, 8, 8);">Tomorrow: {{((widget.temps[0]))}} °</div>
-            <div class="forecastWidgetRow" style="font-size:18x;color: rgb(8, 8, 8);">{{((widget.descrips[0]))}}</div>
-            <div class="forecastWidgetRow" style="font-size:15px;color: rgb(35, 90, 209);">  2nd Day: {{((widget.temps[1]))}} °</div>
-            <div class="forecastWidgetRow" style="font-size:12px;color: rgb(35, 90, 209);">{{((widget.descrips[1]))}}</div>
-            <div class="forecastWidgetRow" style="font-size:15px;color: rgb(218, 55, 55);">  3rd Day: {{((widget.temps[2]))}} °</div>
-            <div class="forecastWidgetRow" style="font-size:12px;color: rgb(218, 55, 55);">{{((widget.descrips[2]))}}</div>            
-            <mat-card-actions style="display:none">
-                <button mat-mini-fab (click)="removeForecast(widget.name)" class="delete_button">
-                    <mat-icon>delete</mat-icon>
+    <div fxLayout="row wrap" fxLayoutGap="15px grid" fxLayoutAlign="center" class="content">
+        <app-calendar class="widgetContainer" fxFlex="15%" *ngFor="let i of calendar_widgets" (delete)="removeWidget($event)"></app-calendar>
+        <!-- <app-weather fxFlex="18%" *ngFor="let i of weather_widgets" (delete)="removeWeather($event)"></app-weather> -->
+        <!-- <app-weather fxFlex="18%" *ngFor="let i of forecast_widgets" (delete)="removeForecast($event)"></app-forecast> -->
+        <!-- <app-stocks fxFlex="20%" *ngFor="let i of stock_widgets" (delete)="removeStocks($event)"></app-stocks> -->
+        <div fxFlex="15%" *ngFor="let widget of weather_widgets" class="widgetContainer"> 
+            <mat-card>
+                <mat-card-title>{{widget.name}}</mat-card-title>
+                <mat-card-subtitle>{{widget.country}}</mat-card-subtitle>
+                <div class="weatherWidgetRow" style="font-size:28px;margin:top 5px;">{{((widget.temp - 273) * (9/5) + 32).toFixed(2)}} °f</div>
+                <div class="weatherWidgetRow" style="font-size:15x;margin:top 10px;color: rgb(8, 8, 8);">Feels like: {{((widget.feels_like- 273) * (9/5) + 32).toFixed(2)}}°</div>
+                <div class="weatherWidgetRow" style="font-size:12px;color: rgb(8, 8, 8);">Low: {{((widget.temp_min - 273) * (9/5) + 32).toFixed(2)}}°</div>
+                <div class="weatherWidgetRow" style="font-size:12px;color: rgb(8, 8, 8);">High {{((widget.temp_max - 273) * (9/5) + 32).toFixed(2)}}°</div>
+                <mat-card-actions style="display:none">
+                    <button mat-mini-fab (click)="removeWeather(widget.widgetId)" class="delete_button">
+                        <mat-icon>delete</mat-icon>
+                    </button>
+                </mat-card-actions>
+                <button mat-mini-fab (click)="toggleButtonActionsVisible($event)" class="settings_button">
+                    <mat-icon>settings</mat-icon>
                 </button>
-            </mat-card-actions>
-            <button mat-mini-fab (click)="toggleButtonActionsVisible($event)" class="settings_button">
-                <mat-icon>settings</mat-icon>
-            </button>
-        </mat-card>
-    </div>
-    <div fxFlex="15%" *ngFor="let widget of stock_widgets" class="widgetContainer"> 
-        <mat-card>
-            <mat-card-title>{{widget.name}}</mat-card-title>
-            <mat-card-subtitle>{{widget.company}}</mat-card-subtitle>
-            <div class="stockWidgetRow" style="font-size:32px;margin:top 5px;">{{widget.current_price}}$</div>
-            <div class="stockWidgetRow" style="font-size:15x;margin:top 10px;color: red;">Low: {{widget.daily_low}}$</div>
-            <div class="stockWidgetRow" style="font-size:15x;margin:top 10px;color: green;">High: {{widget.daily_high}}$</div>
-            <div class="stockWidgetRow" style="font-size:12px;">{{widget.volume}} shares</div>
-            <mat-card-actions style="display:none">
-                <button mat-mini-fab (click)="removeStocks(widget.name)" class="delete_button">
-                    <mat-icon>delete</mat-icon>
+            </mat-card>
+        </div>
+        <div fxFlex="15%" *ngFor="let widget of forecast_widgets" class="widgetContainer"> 
+            <mat-card>
+                <mat-card-title>{{widget.name}}</mat-card-title>
+                <mat-card-subtitle>{{widget.country}}</mat-card-subtitle>
+                <div class="forecastWidgetRow" style="font-size:24x;margin:top 10px;color: rgb(8, 8, 8);">Tomorrow: {{((widget.temps[0]))}} °</div>
+                <div class="forecastWidgetRow" style="font-size:18x;color: rgb(8, 8, 8);">{{((widget.descrips[0]))}}</div>
+                <div class="forecastWidgetRow" style="font-size:15px;color: rgb(35, 90, 209);">  2nd Day: {{((widget.temps[1]))}} °</div>
+                <div class="forecastWidgetRow" style="font-size:12px;color: rgb(35, 90, 209);">{{((widget.descrips[1]))}}</div>
+                <div class="forecastWidgetRow" style="font-size:15px;color: rgb(218, 55, 55);">  3rd Day: {{((widget.temps[2]))}} °</div>
+                <div class="forecastWidgetRow" style="font-size:12px;color: rgb(218, 55, 55);">{{((widget.descrips[2]))}}</div>            
+                <mat-card-actions style="display:none">
+                    <button mat-mini-fab (click)="removeForecast(widget.name)" class="delete_button">
+                        <mat-icon>delete</mat-icon>
+                    </button>
+                </mat-card-actions>
+                <button mat-mini-fab (click)="toggleButtonActionsVisible($event)" class="settings_button">
+                    <mat-icon>settings</mat-icon>
                 </button>
-            </mat-card-actions>
-            <button mat-mini-fab (click)="toggleButtonActionsVisible($event)" class="settings_button">
-                <mat-icon>settings</mat-icon>
-            </button>
-        </mat-card>
+            </mat-card>
+        </div>
+        <div fxFlex="15%" *ngFor="let widget of stock_widgets" class="widgetContainer"> 
+            <mat-card>
+                <mat-card-title>{{widget.name}}</mat-card-title>
+                <mat-card-subtitle>{{widget.company}}</mat-card-subtitle>
+                <div class="stockWidgetRow" style="font-size:32px;margin:top 5px;">{{widget.current_price}}$</div>
+                <div class="stockWidgetRow" style="font-size:15x;margin:top 10px;color: red;">Low: {{widget.daily_low}}$</div>
+                <div class="stockWidgetRow" style="font-size:15x;margin:top 10px;color: green;">High: {{widget.daily_high}}$</div>
+                <div class="stockWidgetRow" style="font-size:12px;">{{widget.volume}} shares</div>
+                <mat-card-actions style="display:none">
+                    <button mat-mini-fab (click)="removeStocks(widget.name)" class="delete_button">
+                        <mat-icon>delete</mat-icon>
+                    </button>
+                </mat-card-actions>
+                <button mat-mini-fab (click)="toggleButtonActionsVisible($event)" class="settings_button">
+                    <mat-icon>settings</mat-icon>
+                </button>
+            </mat-card>
+        </div>
     </div>
-</div>
+    <footer>
+        <p fxLayoutAlign="center">Created by Gilbert, Joe, Alex and Leo. Data courtesy of Open Weather API and Yahoo Finance.</p>
+        <a href="https://github.com/JosephJackels/ICS499Project" fxLayoutAlign="center">Check us out on Github</a>
+    </footer>
+</html>
