fix stock update frequency, hiding logout tab hiding when certain tabs are refreshed (small bug), and a bit of styling

--- a/frontend/499/src/app/login/login.component.css
+++ b/frontend/499/src/app/login/login.component.css
@@ -1,7 +1,7 @@
 mat-card {
-    background-color: #1c2541;
+    background-color: #618b41;
     color: #e0e0ce;
 }
 input {
-    background-color: #3a506b;
+    background-color: #afbc88;
 }
