--- a/frontend/499/src/app/new-user/new-user.component.css
+++ b/frontend/499/src/app/new-user/new-user.component.css
@@ -1,15 +1,8 @@
-form.ng-pristine {
-    border: 5px solid green;
-    width: 100%;
-    height: 100%;
-}
-
-form.ng-dirty {
-    border: 5px solid red;
-    width: 100%;
-    height: 100%;
-}
 
 mat-card {
-    background-color: #f2af29;
+    background-color: #618b41;
+}
+
+input {
+    background-color: #afbc88;
 }
