--- a/frontend/499/src/app/app.component.html
+++ b/frontend/499/src/app/app.component.html
@@ -2,7 +2,7 @@
   <mat-toolbar style="padding-right: 0px;">
     <span>{{title}}</span>
     <span class="fill-remaining-space"></span>
-    <img src="assets/img/suncloud.jpeg" class="center-block" style="height:100%; right:0px; position:relative;" />
+    <img src="assets/img/sun2.png" class="center-block" style="height:100%; right:0px; position:relative;" />
   </mat-toolbar>
   <span>
     <app-tabs></app-tabs>
