Sign in/Log in improvements, changed our GitHub link to open in new tab and some other smaller stuff.

--- a/frontend/499/src/app/home/home.component.html
+++ b/frontend/499/src/app/home/home.component.html
@@ -70,6 +70,6 @@
     </div>
     <footer>
         <p fxLayoutAlign="center">Created by Gilbert, Joe, Alex and Leo. Data courtesy of Open Weather API and Yahoo Finance.</p>
-        <a href="https://github.com/JosephJackels/ICS499Project" fxLayoutAlign="center">Check us out on Github</a>
+        <a href="https://github.com/JosephJackels/ICS499Project" target="_blank" rel="noreferrer noopener" fxLayoutAlign="center">Check us out on Github</a>
     </footer>
 </html>
