--- a/frontend/499/src/app/login/login-failed-dialog/login-failed-dialog.component.html
+++ b/frontend/499/src/app/login/login-failed-dialog/login-failed-dialog.component.html
@@ -1,4 +1,4 @@
-<h1 mat-dialog-title>Could not create user</h1>
+<h1 mat-dialog-title>Could not Log in</h1>
 <div mat-dialog-content>
   <p>Please try again. Incorrect username or password.</p>
 </div>
