--- a/frontend/499/src/app/login/login.component.css
+++ b/frontend/499/src/app/login/login.component.css
@@ -1,7 +1,13 @@
 mat-card {
     background-color: #618b41;
     color: #e0e0ce;
+    border-radius: 10px 10px 10px 10px;
 }
 input {
     background-color: #afbc88;
+    color: black;
 }
+input::placeholder {
+    color: rgba(40, 39, 40, 0.92);
+    opacity: 1;
+  }
