--- a/frontend/499/src/app/login/login.component.html
+++ b/frontend/499/src/app/login/login.component.html
@@ -1,20 +1,24 @@
 <div class="content" fxLayoutAlign="space-evenly center" fxLayout="row" fxLayout="column">
+    <div class="matcardstyle">
     <mat-card>
-        <mat-card-title><h4>Login</h4></mat-card-title> 
-        <mat-card-content>
-            <form [formGroup]="loginForm" >
-                <div formArrayName="login" >    
-                    <div [formGroupName]="0" fxLayout="column" fxFlexFill>
-                        <p>Username:</p>
-                        <input placeholder="username" type="text" formControlName="username" matInput required>
-                        <p>Password:</p>
-                        <input placeholder="password" type="password" formControlName="password" minlength="10" matInput required>
-                    </div>
-                        <div fxLayout="column" fxFlexFill>
-                            <button mat-button type="submit" (click)="onSubmit()">Submit</button> 
+        <mat-card-header>
+        <mat-card-title><strong><h2>Log In</h2></strong></mat-card-title> 
+        </mat-card-header>
+            <mat-card-content>
+                <form [formGroup]="loginForm" >
+                    <div formArrayName="login">    
+                        <div [formGroupName]="0" fxLayout="column" fxLayoutAlign="space-evenly center">
+                    
+                            <input id="username" placeholder="Username" type="text" formControlName="username" matInput required>
+                        
+                            <input id="password" placeholder="Password" type="password" formControlName="password" minlength="10" matInput required>
                         </div>
-                    </div>
-                </form>
-            </mat-card-content>
+                            <div fxLayout="column" fxFlexFill>
+                                <button mat-stroked-button type="submit" (click)="onSubmit()">Log In</button> 
+                            </div>
+                        </div>
+                    </form>
+                </mat-card-content>
     </mat-card>
+    </div>
 </div>
