--- a/frontend/499/src/app/new-user/new-user.component.html
+++ b/frontend/499/src/app/new-user/new-user.component.html
@@ -1,29 +1,28 @@
 <div class="content" fxLayoutAlign="space-evenly center" fxLayout="row" fxLayout="column">
+    <div class="matcardstyle">
 <mat-card>
     <mat-card-header> 
-        <mat-card-title><h4>Register</h4></mat-card-title> 
+        <mat-card-title><strong><h2>Register</h2></strong></mat-card-title> 
         </mat-card-header>
         <mat-card-content>
             <form [formGroup]="registerForm" >
                 <div formArrayName="register" >    
-                    <div [formGroupName]="0" fxLayout="column" fxFlexFill>
-                        <p>Username:</p>
-                        <input placeholder="username" type="text" formControlName="username" matInput required>
-                        <p>Password (min 10 characters):</p>
-                        <input placeholder="password" type="password" formControlName="password" minlength="10" matInput required>
-                        <p>Re-type password:</p>
-                        <input placeholder="password"  type="password" formControlName="password2" matInput required>
+                    <div [formGroupName]="0" fxLayout="column" fxFlexFill fxLayoutAlign="space-evenly center">
+                        
+                        <input placeholder="Username" type="text" formControlName="username" matInput required>
+                        
+                        <input placeholder="Password" type="password" formControlName="password" minlength="10" matInput required>
+                       
+                        <input placeholder="Re-type Password:"  type="password" formControlName="password2" matInput required>
                     </div>
                     <div fxLayout="column" fxFlexFill>
-                        <button mat-button type="submit" (click)="onSubmit()">Submit</button> 
+                        <button mat-stroked-button type="submit" (click)="onSubmit()">Sign Up</button> 
                     </div>
-                    <p>
-                        Form Status: {{registerForm.status}}
-                    </p>
                     <div *ngIf="registerForm.value.register[0].password != registerForm.value.register[0].password2">Passwords do not match</div>
 
                 </div>
             </form>
         </mat-card-content>
 </mat-card>
+</div>
 </div>
